[svn] some refactoring

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,13 +8,16 @@ INCLUDES = \
 bin_PROGRAMS = bridgehand
 
 bridgehand_SOURCES = \
-	main.c \
+	main.c main.h \
 	support.c support.h \
 	interface.c interface.h \
 	callbacks.c callbacks.h \
 	bridge.c bridge.h \
 	board.c board.h \
-	solve.c solve.h
+	file.c file.h \
+	functions.c functions.h \
+	solve.c solve.h \
+	window_card.c window_card.h
 
 bridgehand_LDADD = @PACKAGE_LIBS@ $(INTLLIBS) -ldds
 
