[svn] some bidding

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,6 +16,7 @@ tenace_SOURCES = \
 	file.c file.h \
 	functions.c functions.h \
 	solve.c solve.h \
+	window_bids.c window_bids.h \
 	window_board.c window_board.h \
 	window_card.c window_card.h \
 	window_line_entry.c window_line_entry.h \
