[svn] get po working, debianize

--- a/handdisplay/Makefile
+++ b/handdisplay/Makefile
@@ -1,11 +1,11 @@
 CFLAGS += -O0 -g -Wall $(shell pkg-config --cflags gtk+-2.0)
 LDFLAGS += $(shell pkg-config --libs gtk+-2.0)
 
-test: hand_display.o test.o
+all: hand_display.o
 
 hand_display.o: hand_display.c hand_display.h
 
-test.o: test.c
+install:
 
 clean:
-	rm -f *.o test
+	rm -f *.o tags
