--- a/configure.in
+++ b/configure.in
@@ -22,6 +22,8 @@ AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])
 dnl Add the languages which your application supports here.
 ALL_LINGUAS="de"
 AM_GLIB_GNU_GETTEXT
+dnl Source is in utf-8
+XGETTEXT="xgettext --from-code=utf-8"
 
 AC_OUTPUT([
 Makefile
