--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,7 @@ D=$(CURDIR)/debian/tenace
 
 configure: configure-stamp
 configure-stamp:
-	./configure --prefix=/usr
+	./configure --prefix=/usr --bindir=/usr/games
 	touch $@
 
 build-indep:
@@ -18,15 +18,16 @@ install: build-stamp
 	dh_testroot
 	dh_clean -k
 	$(MAKE) install DESTDIR=$D
-	dh_install -a
+	install -m644 -D contrib/mailcap $D/usr/lib/mime/packages/tenace
 
 binary-indep:
 
 binary-arch: install
-	dh_installchangelogs
+	dh_installchangelogs -a
 	dh_installdocs -a
-	dh_installman -a
-	dh_installexamples -a
+	dh_installman -a doc/tenace.6
+	dh_installexamples -a examples
+	dh_installmime -a
 	dh_strip -a
 	dh_compress -a
 	dh_fixperms -a
@@ -40,7 +41,7 @@ binary: binary-indep binary-arch
 
 clean:
 	dh_testdir
-	-$(MAKE) clean
+	$(MAKE) clean
 	dh_clean build-stamp configure-stamp
 
 .PHONY: build build-indep build-arch clean binary binary-indep binary-arch install configure patch unpatch
