--- a/configure.in
+++ b/configure.in
@@ -21,7 +21,7 @@ AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])
 
 dnl Add the languages which your application supports here.
-ALL_LINGUAS="de"
+ALL_LINGUAS="de en"
 AM_GLIB_GNU_GETTEXT
 dnl Source is in utf-8
 XGETTEXT="xgettext --from-code=utf-8"
