Add PDF export (rudimentary) and magic cards printing (mostly complete)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,6 +16,7 @@ tenace_SOURCES = \
 	file.c file.h \
 	functions.c functions.h \
 	options.c options.h \
+	print.c print.h \
 	solve.c solve.h \
 	window_bids.c window_bids.h \
 	window_board.c window_board.h \
