move non-window_board callbacks into separate files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,6 +20,7 @@ tenace_SOURCES = \
 	window_board.c window_board.h \
 	window_card.c window_card.h \
 	window_line_entry.c window_line_entry.h \
+	window_misc.c window_misc.h \
 	window_play.c window_play.h
 
 tenace_LDADD = @PACKAGE_LIBS@ $(INTLLIBS) -ldds ../handdisplay/hand_display.o
