Include dds copy in our source to facilitate compilation on systems not providing libdds.a.

--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,11 @@ AC_ISC_POSIX
 AC_PROG_CC
 AM_PROG_CC_STDC
 AC_HEADER_STDC
+AC_CHECK_LIB([dds], [SolveBoard], [havelibdds=yes],
+	     [echo Using internal dds library
+	      CFLAGS="$CFLAGS -I../dds"
+	      LDFLAGS="$LDFLAGS -L../dds"], [])
+AM_CONDITIONAL(HAVE_LIBDDS, [test x$havelibdds = xyes])
 
 pkg_modules="gtk+-2.0 >= 2.0.0"
 PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
@@ -29,6 +34,7 @@ XGETTEXT="xgettext --from-code=utf-8"
 AC_OUTPUT([
 Makefile
 contrib/Makefile
+dds/Makefile
 doc/Makefile
 examples/Makefile
 handdisplay/Makefile
