--- a/handdisplay/Makefile.am
+++ b/handdisplay/Makefile.am
@@ -7,7 +7,7 @@ EXTRA_DIST = hand_display.c hand_display.h
 all: hand_display.o
 
 hand_display.o: hand_display.c hand_display.h int_int_marshal.h
-	$(CC) $(CFLAGS) -c -o $@ $<
+	$(CC) $(CFLAGS) -I. -c -o $@ $<
 
 int_int_marshal.h:
 	echo VOID:INT,INT | glib-genmarshal --header --body --skip-source > $@
