--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,17 +1,20 @@
 # List of source files containing translatable strings.
 
+tenace.glade
+
 src/bridge.c
 src/callbacks.c
 src/file.c
 src/functions.c
-src/interface.c
 src/main.c
+src/options.c
+src/print.c
 src/solve.c
-src/support.c
 src/window_bids.c
 src/window_board.c
 src/window_card.c
 src/window_line_entry.c
+src/window_misc.c
 src/window_play.c
 
 # File for strings needed, but not in source
