--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,7 @@ AM_MAINTAINER_MODE
 
 AC_ISC_POSIX
 AC_PROG_CC
+AC_PROG_INTLTOOL
 AC_PROG_LIBTOOL
 AM_PROG_CC_STDC
 AC_HEADER_STDC
@@ -24,7 +25,7 @@ AC_SUBST(PACKAGE_LIBS)
 
 GETTEXT_PACKAGE=tenace
 AC_SUBST(GETTEXT_PACKAGE)
-AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])
+AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"], [tenace])
 
 dnl Add the languages which your application supports here.
 ALL_LINGUAS="de en"
@@ -43,3 +44,4 @@ src/Makefile
 po/Makefile.in
 ])
 
+IT_PROG_INTLTOOL
