--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: tenace
 Section: games
 Priority: extra
 Maintainer: Christoph Berg <myon@debian.org>
-Build-Depends: debhelper (>> 5), libgtk2.0-dev, libglade2-dev, libdds-dev (>> 1.0.4), intltool
-Standards-Version: 3.8.0
+Build-Depends: debhelper (>> 7), libgtk2.0-dev, libdds-dev (>> 1.0.4), intltool
+Standards-Version: 3.8.3
 XS-Vcs-Browser: http://hg.df7cb.de/hg/tenace
 XS-Vcs-Hg: http://hg.df7cb.de/hg/tenace
 Homepage: http://www.df7cb.de/bridge/tenace/
