--- a/configure.ac
+++ b/configure.ac
@@ -6,10 +6,12 @@ AM_INIT_AUTOMAKE([-Wall foreign])
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
+AC_CONFIG_MACRO_DIR([m4])
+
 AC_ISC_POSIX
 AC_PROG_CC
 AC_PROG_INTLTOOL
-AC_PROG_LIBTOOL
+AM_PROG_LIBTOOL
 AM_PROG_CC_STDC
 AC_HEADER_STDC
 AC_CHECK_LIB([dds], [SolveBoard], [havelibdds=yes],
