tweaks for releasing 0.10

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -3,6 +3,7 @@ examplesdir = $(docdir)/examples
 examples_DATA = README.examples \
 	01-26-08-3.lin \
 	2007_Spingold_Final.First_Quarter.lin \
+	7nt-south.lin \
 	everybody-makes-3nt.lin \
 	everybody-makes-3s.lin \
 	everybody-makes-7nt.lin \
