--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: games
 Priority: extra
 Maintainer: Christoph Berg <myon@debian.org>
 Build-Depends: debhelper (>> 7), libgtk2.0-dev, libdds-dev (>= 2.1.1), intltool
-Standards-Version: 3.9.1
+Standards-Version: 3.9.4
 XS-Vcs-Browser: http://git.debian.org/?p=collab-maint/tenace.git
 XS-Vcs-Git: git://git.debian.org/collab-maint/tenace.git
 Homepage: http://www.df7cb.de/bridge/tenace/
@@ -13,7 +13,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, gnome-cards-data, librsvg2-common
 Description: Bridge hand viewer and editor
  Tenace is a Bridge hand viewer and editor. Hand records are read using
- BBO's .lin format. The board editor allows to easily move cards around to
+ BBO's .lin format. The board editor allows one to easily move cards around to
  simulate different distributions. The double dummy solver computes optimal
  lines of play and par scores.
  .
