--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get build-dep tenace
+  - sudo apt-get install -y gnulib
 language: c
 compiler:
   - gcc
