--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,6 @@ AC_CONFIG_MACRO_DIR([m4])
 AC_ISC_POSIX
 AC_PROG_CC
 gl_EARLY
-AC_PROG_INTLTOOL
 AM_PROG_LIBTOOL
 AM_PROG_CC_STDC
 AC_HEADER_STDC
@@ -26,17 +25,18 @@ PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
 AC_SUBST(PACKAGE_CFLAGS)
 AC_SUBST(PACKAGE_LIBS)
 
+IT_PROG_INTLTOOL([0.35.0])
+
 GETTEXT_PACKAGE=tenace
 AC_SUBST(GETTEXT_PACKAGE)
-AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"], [tenace])
+AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"],
+		                      [The domain to use with gettext])
+AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_VERSION([0.17])
 
-dnl Add the languages which your application supports here.
-ALL_LINGUAS="de en"
-AM_GLIB_GNU_GETTEXT
-dnl Source is in utf-8
-XGETTEXT="xgettext --from-code=utf-8"
+PROGRAMNAME_LOCALEDIR=[${datadir}/locale]
+AC_SUBST(PROGRAMNAME_LOCALEDIR)
 
-dnl IT_PROG_INTLTOOL
 gl_INIT
 
 AC_CONFIG_FILES([
