Ship README.md in tarball

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@ SUBDIRS = contrib dds doc examples handdisplay lib src po
 
 dist_pkgdata_DATA = tenace.desktop tenace.png tenace.ui tenace.glade magic.ui
 
-EXTRA_DIST = autogen.sh m4/gnulib-cache.m4 m4/gnulib-tool.m4
+EXTRA_DIST = README.md autogen.sh m4/gnulib-cache.m4 m4/gnulib-tool.m4
 
 install-data-local:
 	@$(NORMAL_INSTALL)
