Adapt glib-genmarshal call to new syntax.

--- a/handdisplay/Makefile.am
+++ b/handdisplay/Makefile.am
@@ -10,7 +10,7 @@ hand_display.o: hand_display.c hand_display.h int_int_marshal.h
 	$(CC) $(CFLAGS) -I. -c -o $@ $<
 
 int_int_marshal.h:
-	echo VOID:INT,INT | glib-genmarshal --header --body --skip-source > $@
+	echo VOID:INT,INT | glib-genmarshal --body --prototypes - > $@
 
 clean-local:
 	rm -f *.o tags int_int_marshal.h
