Remove two generated po-related files from git

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # autotools
+ABOUT-NLS
 aclocal.m4
 autom4te.cache/
 config/
@@ -12,6 +13,15 @@ Makefile
 po/POTFILES
 po/*.gmo
 po/stamp-it
+po/Makefile.in.in
+po/Makevars.template
+po/Rules-quot
+po/boldquot.sed
+po/en@boldquot.header
+po/en@quot.header
+po/insert-header.sin
+po/quot.sed
+po/remove-potcdate.sin
 src/.deps
 stamp-h1
 intltool-*
