Use int_int_marshal.def to feed glib-genmarshal
The old glib-genmarshal doesn't like "-" for stdin and the new version
insists on it. Duh.

--- a/handdisplay/Makefile.am
+++ b/handdisplay/Makefile.am
@@ -2,15 +2,16 @@ CC = @CC@
 CFLAGS += @PACKAGE_CFLAGS@
 LDFLAGS += @PACKAGE_LIBS@
 
-EXTRA_DIST = hand_display.c hand_display.h
+EXTRA_DIST = hand_display.c hand_display.h int_int_marshal.def
 
 all: hand_display.o
 
 hand_display.o: hand_display.c hand_display.h int_int_marshal.h
 	$(CC) $(CFLAGS) -I. -c -o $@ $<
 
-int_int_marshal.h:
-	echo VOID:INT,INT | glib-genmarshal --body --prototypes - > $@
+int_int_marshal.h: int_int_marshal.def
+	glib-genmarshal --header $< > $@
+	glib-genmarshal --body $< >> $@
 
 clean-local:
 	rm -f *.o tags int_int_marshal.h
