Include dds/patches and .travis.yml in tarball

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,17 @@ SUBDIRS = contrib dds doc examples handdisplay lib src po
 
 dist_pkgdata_DATA = tenace.desktop tenace.png tenace.ui tenace.glade magic.ui
 
-EXTRA_DIST = README.md autogen.sh m4/gnulib-cache.m4 m4/gnulib-tool.m4
+EXTRA_DIST = \
+	     README.md \
+	     autogen.sh \
+	     dds/patches/dds.cpp-autoconfig \
+	     dds/patches/dds.cpp-fixes \
+	     dds/patches/dds.cpp-openmp \
+	     dds/patches/dll.h-extern_c \
+	     dds/patches/dll.h-__int64 \
+	     dds/patches/series \
+	     dds/patches/skip-dll-build \
+	     .travis.yml
 
 install-data-local:
 	@$(NORMAL_INSTALL)
