--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: tenace
 Section: games
 Priority: optional
 Maintainer: Christoph Berg <myon@debian.org>
-Build-Depends: debhelper (>> 11), libgtk2.0-dev, libdds-dev (>= 2.9), intltool
+Build-Depends: debhelper (>= 12~), libgtk2.0-dev, libdds-dev (>= 2.9), intltool
 Standards-Version: 4.3.0
 Vcs-Browser: https://github.com/ChristophBerg/tenace
 Vcs-Git: https://github.com/ChristophBerg/tenace.git
